--- a/package.json
+++ b/package.json
@@ -25,17 +25,19 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "diamnet-sdk": "^1.0.2",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.5.0",
     "drizzle-kit": "^0.30.5",
     "drizzle-orm": "^0.40.1",
     "ejs": "^3.1.10",
     "ethers": "^5.7.0",
-    "express": "^4.18.3",
+    "express": "^4.21.2",
+    "ioredis": "^5.6.0",
     "js-sha512": "^0.9.0",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "node-telegram-bot-api": "^0.66.0",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -53,6 +55,7 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
-    "@types/node": "^20.17.9"
+    "@types/node": "^20.17.9",
+    "@types/nodemailer": "^6.4.17"
   }
 }
