--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "diamnet-sdk": "^1.0.2",
@@ -36,6 +37,7 @@
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.2",
     "node-telegram-bot-api": "^0.66.0",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
@@ -55,6 +57,7 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.17.9",
     "@types/nodemailer": "^6.4.17"
   }
