--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.2",
+    "node-fetch": "^3.3.2",
     "node-telegram-bot-api": "^0.66.0",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pdf-lib": "^1.17.1",
+    "pdf-merger-js": "^5.1.2",
     "pg": "^8.11.3",
     "streamifier": "^0.1.1",
     "swagger-autogen": "^2.23.7",
