--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ejs": "^3.1.10",
     "ethers": "^5.7.0",
     "express": "^4.21.2",
+    "google-auth-library": "^9.15.1",
     "ioredis": "^5.6.0",
     "js-sha512": "^0.9.0",
     "js-yaml": "^4.1.0",
