--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "bull": "^4.16.5",
-    "cloudinary": "^2.6.0",
+    "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "diamnet-sdk": "^1.0.2",
@@ -33,6 +33,9 @@
     "ejs": "^3.1.10",
     "ethers": "^5.7.0",
     "express": "^4.21.2",
+    "ffmpeg": "^0.0.4",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "google-auth-library": "^9.15.1",
     "ioredis": "^5.6.0",
     "js-sha512": "^0.9.0",
@@ -64,6 +67,8 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/ffmpeg": "^1.0.7",
+    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.17.9",
     "@types/nodemailer": "^6.4.17",
